# content-accounts

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  QUICK_START.md  README.md  TESTING_CHECKLIST.md  create-account.sh  generate.sh  pyproject.toml  requirements.txt  validate.sh  verify_semantic_scoring.py
accounts/dreamtimelullabies/: README.md  config.py  content_templates.json  performance_context.json  qa_learnings.json  scenes.json
accounts/salesprofessional/: config.py  content_templates.json  scenes.json
accounts/slumbersongs/: README.md  config.py  content_templates.json  performance_context.json  scenes.json
cli/: __init__.py  analyze.py  clone_post.py  create_account.py  generate.py  qa.py  validate.py
cli/templates/: color_presets.json  config_template.py  content_templates.json  pillars_cooking.json  pillars_fitness.json  pillars_parenting.json  pillars_productivity.json  scenes_template.json
core/: __init__.py  blueprint_adapter.py  blueprint_schema.py  blueprint_to_template.py  config_schema.py  content_formats.py  copy_analyzer.py  defaults.py  format_analyzer.py  generator.py  image_generator.py  llm_client.py  pexels_client.py  post_scraper.py  prompts.py  qa_checker.py  qa_learnings.py  semantic_scorer.py  utils.py  virality_analyzer.py  visual_analyzer.py
core/analytics/: analyzer.py  backfill.py  dashboard.py  db.py  generator_integration.py  recommender.py  scraper.py  visual_extractor.py
scripts/: __init__.py  daily_scrape.py  migrate_dreamtime.py  setup_cron.sh  weekly_recommend.py
(+14 files in other folders)
